# gr-powerquality

./: .gitignore  CMakeLists.txt  HISTORY.md  MANIFEST.md  RASBERRYPI-GNURADIO-TRICKS.md  RASPBERRYPI-GNURADIO-TRICKS.md  README.md
cmake/Modules/: powerqualityConfig.cmake
docs/: README.powerquality
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: acSoundOnlyStreamSource-adaptiveFrequency-stereo-localhost.py  acSoundOnlyStreamSource-adaptiveFrequency-stereo.py  acSoundOnlyStreamSource-adaptiveFrequency.py  acpq.py  acpqheadphones-runner.sh  acpqheadphones.grc  acpqheadphones.py  circularBufferOfVlcRecordings.sh  config.example  config.yml.example  stream_acSoundOnly-stereo-localhost.sh  stream_acSoundOnly-stereo.sh  stream_acSoundOnly.sh  streamer.grc
examples/elasticsearch/: createElasticsearchTemplate.sh
examples/service-files/: acpqheadphones.service  pq-cur-A.service  pq-cur-B.service  pq-volts-A.service  pq-volts-B.service
examples/udev-rules/: 70-alsa-permanent.rules
grc/: CMakeLists.txt  powerquality_acsound.xml  powerquality_getfreqcpp.xml  powerquality_pq_rails.xml
include/powerquality/: CMakeLists.txt  api.h  getfreqcpp.h
lib/: CMakeLists.txt  getfreqcpp_impl.cc  getfreqcpp_impl.h  pq_rails_impl.cc  pq_rails_impl.h  qa_powerquality.cc  qa_powerquality.h  test_powerquality.cc
python/: CMakeLists.txt  __init__.py  qa_getfreqcpp.py
swig/: CMakeLists.txt  powerquality_swig.i
